--- a/demo/friends.html
+++ b/demo/friends.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="contentarea">
-    <h1>NotSnapChat</h1>
+    <h1>NotSnapChat - My Friends</h1>
     <p id="tagline">Welcome!</p>
 
     <div id="friendslist"></div>
