Friends list working

--- a/demo/friends.html
+++ b/demo/friends.html
@@ -12,8 +12,11 @@
     <p id="tagline">Welcome!</p>
 
     <div id="friendslist"></div>
-    <button id="addbutton">Add Friend</button>
 
+    <div id="addfriendscontrols">
+      <input id="addfriendfield" type="text">
+      <button id="addbutton">Add Friend</button>
+    </div>
     <br><a href="index.html">Back to Camera</a>
 
   </div>
