--- a/demo/inbox.html
+++ b/demo/inbox.html
@@ -13,7 +13,8 @@
 
     <div id="messagelist"></div>
     <img id="photo">
-    <br><a href="index.html">Back to Camera</a>
+
+    <br><br><a href="index.html">Back to Camera</a>
 
   </div>
 </body>
