--- a/demo/friends.html
+++ b/demo/friends.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>NotSnapChat - Friends</title>
+	<title>CrapChat - Friends</title>
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="main.css" type="text/css" media="all">
 	<script src="friends.js"></script>
