--- a/demo/inbox.html
+++ b/demo/inbox.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>NotSnapChat - Inbox</title>
+	<title>CrapChat - Inbox</title>
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="main.css" type="text/css" media="all">
 	<script src="inbox.js"></script>
