--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>NotSnapChat</title>
+  <title>CrapChat</title>
   <meta charset='utf-8'>
   <link rel="stylesheet" href="main.css" type="text/css" media="all">
   <script src="capture.js"></script>
